--- a/package.json
+++ b/package.json
@@ -1,27 +1,73 @@
 {
-  "name": "nextjs-tamplate",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "nextjs-tamplate",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "local": "SET NODE_ENV=development&&next dev --turbopack",
+        "build": "SET NODE_ENV=production&&next build",
+        "start": "SET NODE_ENV=production&&next start",
+        "lint": "next lint",
+        "build-tailwind": "npx tailwindcss -i ./src/app/globals.css -o ./src/app/tailwind.css",
+        "format-code": "npx prettier --write .",
+        "git-pre-commit": "eslint . && npm run build-tailwind && npm run build  && npx prettier --write . && git add . ",
+        "git-commit": "npm run git-pre-commit && git commit",
+        "next-export": "npm run build&&next export"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.13.5",
+        "@emotion/styled": "^11.13.5",
+        "@lottiefiles/dotlottie-react": "^0.11.0",
+        "@mui/icons-material": "^6.1.10",
+        "@mui/material": "^6.1.10",
+        "@react-three/fiber": "^8.17.10",
+        "@syncfusion/ej2": "^28.1.35",
+        "@types/three": "^0.171.0",
+        "@use-gesture/react": "^10.3.1",
+        "apexcharts": "^4.2.0",
+        "apextree": "^1.3.0",
+        "cesium": "^1.124.0",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "framer-motion": "^11.15.0",
+        "jwt-decode": "^4.0.0",
+        "lucide-react": "^0.468.0",
+        "next": "15.1.3",
+        "path": "^0.12.7",
+        "react": "^18.3.1",
+        "react-chrono": "^2.6.1",
+        "react-content-loader": "^7.0.2",
+        "react-dom": "^18.3.1",
+        "react-drag-drop-files": "^2.4.0",
+        "react-helmet-async": "^2.0.5",
+        "react-lineto": "^3.3.0",
+        "react-resizable-panels": "^2.1.7",
+        "react-router-dom": "^7.0.2",
+        "react-spring": "^9.7.4",
+        "react-toastify": "^10.0.6",
+        "react-type-animation": "^3.2.0",
+        "resium": "^1.18.3",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7",
+        "three": "^0.171.0"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@eslint/js": "^9.15.0",
+        "@types/node": "^20",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "@vitejs/plugin-react": "^4.3.4",
+        "eslint": "^9.15.0",
+        "eslint-config-next": "15.1.3",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.14",
+        "globals": "^15.12.0",
+        "graphql": "^16.10.0",
+        "postcss": "^8",
+        "prettier": "^3.4.2",
+        "tailwindcss": "^3.4.16",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "^8.15.0"
+    }
 }
